put list to index file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 
 <body>
     <p>Hello world!</p>
+    <ol>
+        <li>
+            <dt>KML</dt>
+            <dd>- Kaungmalay</dd>
+        </li>
+        <li>
+            <dt>KO KO</dt>
+            <dd>- Kaungmalay's Husband</dd>
+        </li>
+        <li>
+            <dt>Pai Kat</dt>
+            <dd>-Kaungmalay's Pet</dd>
+        </li>
+    </ol>
 </body>
 
 </html>
