Modified external css

--- a/CSS/externalcss.html
+++ b/CSS/externalcss.html
@@ -11,15 +11,15 @@
     <p>Hello world!<br />I am Zar Ni Phyoe.</p>
     <ol>
         <li>
-            <dt>KML</dt>
+            <dt><b>KML</b></dt>
             <dd>- Kaungmalay</dd>
         </li>
         <li>
-            <dt>KO KO</dt>
+            <dt><b>KO KO</b></dt>
             <dd>- Kaungmalay's Husband</dd>
         </li>
         <li>
-            <dt>Pai Kat</dt>
+            <dt><b>PAI KAT</b></dt>
             <dd>-Kaungmalay's Pet</dd>
         </li>
     </ol>
