--- a/CSS/Border.html
+++ b/CSS/Border.html
@@ -5,6 +5,20 @@
     <meta charset="utf-8">
     <title>internal css</title>
     <style>
+        .logo{
+            color: white;
+            font-size:48px;
+            font-family:sans-serif;
+            background-color:darkblue;
+            background-position: center;
+            height:80px;
+            width:80px;
+            padding: 20px;
+            border-width:10px;
+            border-color:darkred;
+            border-style:solid;
+            border-radius:80px;
+        }
         .me{
             color: green;
             font-size: 100%;
@@ -32,7 +46,12 @@
 </head>
 
 <body>
-    <div class="me">
+    <div class="logo">
+       <p>
+         &nbsp;&nbsp;&nbsp;<b>Z</b> 
+       </p>
+    </div> 
+   <div class="me">
        <p>
             Hello world!<br />I am Zar Ni Phyoe. 
        </p>
