--- a/CSS/Border.html
+++ b/CSS/Border.html
@@ -7,17 +7,19 @@
     <style>
         .logo{
             color: white;
-            font-size:48px;
+            font-size:84px;
+            font-weight:bold;
             font-family:sans-serif;
+            text-align:center;
             background-color:darkblue;
             background-position: center;
             height:80px;
             width:80px;
-            padding: 20px;
+            padding: 40px;
             border-width:10px;
             border-color:darkred;
             border-style:solid;
-            border-radius:80px;
+            border-radius:100px;
         }
         .me{
             color: green;
@@ -47,9 +49,7 @@
 
 <body>
     <div class="logo">
-       <p>
-         &nbsp;&nbsp;&nbsp;<b>Z</b> 
-       </p>
+        Z 
     </div> 
    <div class="me">
        <p>
