index modified as My Family

--- a/index.html
+++ b/index.html
@@ -3,12 +3,70 @@
 
 <head>
     <meta charset="utf-8">
-    <title>My first webpage</title>
+    <title>My Family</title>
+    <style>
+        .logo{
+            color: white;
+            font-size:84px;
+            font-weight:bold;
+            font-family:sans-serif;
+            text-align:center;
+            background-color:darkblue;
+            background-position: center;
+            height:80px;
+            width:80px;
+            padding: 40px;
+            border-width:10px;
+            border-color:darkred;
+            border-style:solid;
+            border-radius:100px;
+        }
+        .me{
+            color: green;
+            font-size: 100%;
+            font-family: cursive;
+            background-color: antiquewhite;
+            padding: 10px 5px 7px 3em;
+            border-width:10px 15px 5px 10px;
+            border-color:aqua;
+            border-style:ridge;
+        }
+        .myfamily{
+            color: blue;
+            font-size: 100%;
+            font-family: cursive;
+            background-color: antiquewhite;
+        }
+        .kml{
+            font-size: 120%;
+            font-style: oblique;
+        }
+        p{
+            mergin:0;
+        }
+    </style>
 </head>
 
 <body>
-    <p>Hello world!</p>
-    <ol>
+    <div class="logo">
+        Z 
+    </div> 
+   <div class="me">
+       <p>
+            Hello world!<br />I am Zar Ni Phyoe. 
+       </p>
+    </div> 
+    <div class="myfamily"> 
+        <p>
+            My wife is Pann Ei San, and i call her <span class="kml">Kaungmalay.</span> 
+        </p>
+    </div> 
+    <div class="myfamily"> 
+        <p>
+            Pai Kat is our pet, and my wife loves it very much.
+        </p>
+    </div> 
+        <ol>
         <li>
             <dt>KML</dt>
             <dd>- Kaungmalay</dd>
