final modification for 17Aug night

--- a/CSS/Border.html
+++ b/CSS/Border.html
@@ -20,6 +20,12 @@
             border-color:darkred;
             border-style:solid;
             border-radius:100px;
+            transition:transform 1s;
+        }
+        .logo:hover{
+            transform:rotateX(360deg);
+            background-color:green;
+            border-color:fuchsia;
         }
         .me{
             color:goldenrod;
@@ -30,6 +36,11 @@
             border-width:10px 15px 5px 10px;
             border-color:aqua;
             border-style:ridge;
+            transition:transform 1s;
+        }
+        .me:hover{
+            border-color:fuchsia;
+            transform:rotateY(360deg);
         }
         .myfamily{
             color: blue;
